added spring security; updated AuthService;